try to fix margins and alignments on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@ html {
 
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     color: var(--text);
@@ -26,6 +27,7 @@ html, body {
     font-size: 14pt;
     scroll-behavior: smooth;
     line-height: 1.3;
+    overflow-x: hidden;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -35,11 +37,12 @@ html, body {
 }
 
 .container {
-    margin-left: 10%;
-    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
     height: 100%;
     box-sizing: border-box;
     z-index: 999;
+    width: 100%;
 }
 
 /* Heading */
@@ -105,8 +108,8 @@ html, body {
 
 @media screen and (max-width: 800px) {
     .container {
-        margin-left: 10%;
-        margin-right: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
     }
     .links a{
         display: block;
@@ -199,7 +202,7 @@ a {
     transition: all 0.1s;
     /*font-weight: 500;*/
     font-size: 18pt;
-    display: inline-block;
+    display: inline;
 }
 a:hover {
     color: var(--heading);
@@ -228,6 +231,9 @@ h1:hover {
 @media screen and (max-width: 800px) {
     h1 {
         font-size: 30pt;
+    }
+    p, a {
+        font-size: 14pt;
     }
 }
 h2 {
